For testing forget actions

--- a/Forget.html
+++ b/Forget.html
@@ -124,20 +124,19 @@ I&#39;m not sure how the syntax of the forget function works.  So I will try a f
 
 Forget the variable:
 
-(using this macro:  &#39;&#39;&quot;&lt;&lt;run forget(&#39;$testVariable&#39;)&gt;&gt;&#39;&#39;&quot; )
+(using this macro:  &quot;&quot;&quot;&lt;&lt;run forget(&#39;$testVariable&#39;)&gt;&gt;&quot;&quot;&quot; )
 &lt;&lt;run forget(&#39;$testVariable&#39;)&gt;&gt;
 
-(using this macro:  &#39;&#39;&quot;&lt;&lt;run forget($testVariable)&gt;&gt;&#39;&#39;&quot; )
+(using this macro:  &quot;&quot;&quot;&lt;&lt;run forget($testVariable)&gt;&gt;&quot;&quot;&quot; )
 &lt;&lt;run forget($testVariable)&gt;&gt;
 
-(using this macro:  &#39;&#39;&quot;&lt;&lt;run forget(&#39;testVariable&#39;)&gt;&gt;&#39;&#39;&quot; )
+(using this macro:  &quot;&quot;&quot;&lt;&lt;run forget(&#39;testVariable&#39;)&gt;&gt;&quot;&quot;&quot; )
 &lt;&lt;run forget(&#39;testVariable&#39;)&gt;&gt;
 
 Some of the options might throw error messages in red if they have failed..
 
-Click on this page lin to see what the result has been:
+To test the results, use the restart function in the menu then go straight to the test page via the menu.
 
-[[Results]]
 
 
 
@@ -165,10 +164,10 @@ You can navigate these two pathways using the menu.
 </tw-passagedata><tw-passagedata pid="4" name="Set-remember-forget the variable" tags="" position="325,150" size="100,100">!!!Setting and remembering the test variable
 
 The first action is to set the value of a variable:
-(using this macro:  &#39;&#39;&quot;&lt;&lt;set $testVariable to 6&gt;&gt;&#39;&#39;&quot; )
+(using this macro:  &quot;&quot;&quot;&lt;&lt;set $testVariable to 6&gt;&gt;&quot;&quot;&quot; )
 &lt;&lt;set $testVariable to 6&gt;&gt;
 Remember the variable:
-(using this macro:  &#39;&#39;&quot;&lt;&lt;remember $testVariable&gt;&gt;&#39;&#39;&quot; )
+(using this macro:  &quot;&quot;&quot;&lt;&lt;remember $testVariable&gt;&gt;&quot;&quot;&quot; )
 &lt;&lt;remember $testVariable&gt;&gt;
 The variable should appear between the brackets:
 
@@ -209,7 +208,7 @@ The forget testing passage can be used to test the effectiveness of this.
 
 Click on this link to trigger the &quot;&quot;&quot;&lt;&lt;forget&gt;&gt;&quot;&quot;&quot; macro.
 
-[[Use the forget macro]]</tw-passagedata><tw-passagedata pid="7" name="Use the forget macro" tags="" position="450,400" size="100,100">This macro, &quot;&quot;&quot;&lt;&lt;forget $testVariable&gt;&gt;&quot;&quot;&quot;, has just been triggered by opening this passage.
+[[Use the forget macro]]</tw-passagedata><tw-passagedata pid="7" name="Use the forget macro" tags="" position="450,401" size="100,100">This macro, &quot;&quot;&quot;&lt;&lt;forget $testVariable&gt;&gt;&quot;&quot;&quot;, has just been triggered by opening this passage.
 &lt;&lt;forget $testVariable&gt;&gt;
 
 The variable value/state should appear between the brackets:
