--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ var LZString={_keyStr:"ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz01234
 		<div id="init-lacking"><p>Browser lacks capabilities required to play.</p><p>Upgrade or switch to another browser.</p></div>
 		<div id="init-loading"><div>Loading&hellip;</div></div>
 	</div>
-	<tw-storydata name="Draft Adviser_T2-SC" startnode="324" creator="Twine" creator-version="2.3.16" ifid="F6008109-261F-402E-A46A-FB1960655837" zoom="0.25" format="SugarCube" format-version="2.36.1" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">/* twine-user-stylesheet-joiner */
+	<tw-storydata name="Draft Adviser_T2-SC" startnode="324" creator="Twine" creator-version="2.3.16" ifid="F6008109-261F-402E-A46A-FB1960655837" zoom="0.6" format="SugarCube" format-version="2.36.1" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">/* twine-user-stylesheet-joiner */
 </style><script role="script" id="twine-user-script" type="text/twine-javascript">//Saving and reloading controls 
 
 Config.saves.autosave = true;
@@ -2064,7 +2064,7 @@ This policy victory was only possible because the minerals industry was able to 
 &lt;&lt;return&gt;&gt; | [[«previous|Governance--Backbone]]</tw-passagedata><tw-passagedata pid="134" name="Q--Ethics &amp; interests--Backbone--4include" tags="" position="3550,4500" size="100,100">*What ethical concerns and interests currently drive people’s concerns?
 *How tuned-in are people to their potential ethical concerns and interests?
 *How can people be assisted to tune-in to their ethical concerns and interests in order to strengthen their motivation to take climate action?</tw-passagedata><tw-passagedata pid="135" name="Settings Status" tags="" position="50,800" size="100,100">&lt;&lt;return&gt;&gt;
-!!__Settings Status__
+!!__Where am I up to with the work on the Adviser?__
 &lt;&lt;nobr&gt;&gt;
 &lt;&lt;if $ChecklistChallenge is &quot; 1a.&quot;&gt;&gt;
 &amp;bull;  You are currently working on the &#39;&#39;local government challenge&#39;&#39;.  To change the challenge, go to: [[Checklist challenge?]])
@@ -2262,7 +2262,7 @@ Note: Broadly speaking the idea described in this article is how the renwable en
 
 The strategy is likely to work if the promoted technologies eventually become cost competitive.  It is not clear how the strategy would apply to technologies that are needed to cool the earth (not an objective that has a market under current arrangements) but that never reach a self-funding condition.
 
-&lt;&lt;return&gt;&gt; </tw-passagedata><tw-passagedata pid="152" name="Version input" tags="" position="300,50" size="100,100">Version 12, revised 22 January 2022, 7.43 am.  &lt;small&gt;(Begun 19 December 2021)&lt;/small&gt;
+&lt;&lt;return&gt;&gt; </tw-passagedata><tw-passagedata pid="152" name="Version input" tags="" position="300,50" size="100,100">Version 12, revised 22 January 2022, 7.55 am.  &lt;small&gt;(Begun 19 December 2021)&lt;/small&gt;
 
 Generated using Twine 2.3.16.  
 More information about Twine 2 can be found at: 
@@ -2959,12 +2959,13 @@ If a problem is to be solved effectively, so that it takes into account the tota
 [[Adapting the &quot;whole-package&quot; plan]]
 [[Linked projects]]
 [[Output reports]]
+[[where am I up to?|Settings Status]]
 [[Favourites]]
 [[Background]]
 [[Contact us]]
 [[Old material]]
 [[Dev stuff]]
-[[Settings Status]]
+
 </tw-passagedata><tw-passagedata pid="229" name="Maximum Protection (Index)" tags="" position="925,7375" size="100,100">&lt;&lt;return&gt;&gt; | [[Index]] | [[(F)|passage()][$EmergencyIndexFave =passage()]]&lt;&lt;remember $EmergencyIndexFave&gt;&gt; 
 &lt;&lt;include &quot;Maximum Protection_Index4include&quot;&gt;&gt;
 
