--- a/index.html
+++ b/index.html
@@ -828,12 +828,9 @@ The increasingly strong emphasis on project teams and simultaneous or concurrent
 ----
 [[Output Report_Governments]]  (link or use ≪include≫?)
 ----
-&lt;&lt;return&gt;&gt; | [[Navigation» Adapting the Plan|NAV_Adapting the plan]] | [[(F)|passage()][$FaveLocalGovernments =passage()]]&lt;&lt;remember $FaveLocalGovernments&gt;&gt; </tw-passagedata><tw-passagedata pid="58" name="StoryInit" tags="" position="173.33333333333334,50" size="100,100">/% Set date variables %/
+&lt;&lt;return&gt;&gt; | [[Navigation» Adapting the Plan|NAV_Adapting the plan]] | [[(F)|passage()][$FaveLocalGovernments =passage()]]&lt;&lt;remember $FaveLocalGovernments&gt;&gt; </tw-passagedata><tw-passagedata pid="58" name="PassageReady" tags="" position="175,50" size="100,100">/% Set date variables %/
 &lt;&lt;set $thisYear to new Date().getFullYear()&gt;&gt;
-&lt;&lt;set $CurDate = new Date(Date.now())&gt;&gt;
-
-
-</tw-passagedata><tw-passagedata pid="59" name="Cluster problems for common causes_Opportunity multiplying_Framework4include" tags="" position="8800,5750" size="100,100">!!!__&lt;small&gt;(Opportunity multiplying – Framework)&lt;/small&gt;&lt;br&gt;11. Cluster problems to find common causes__
+&lt;&lt;set $CurDate = new Date(Date.now())&gt;&gt;</tw-passagedata><tw-passagedata pid="59" name="Cluster problems for common causes_Opportunity multiplying_Framework4include" tags="" position="8800,5750" size="100,100">!!!__&lt;small&gt;(Opportunity multiplying – Framework)&lt;/small&gt;&lt;br&gt;11. Cluster problems to find common causes__
 It is no coincidence that prevention is better than cure. Most problems have many symptoms. Suppressing each one of the symptoms can be time consuming, expensive, prone to secondary complications and often ultimately futile. It is far better to treat the cause. Often by opening one&#39;s mind to a whole array of problems at once, it is possible to mentally cluster them around common causative factors. Thus, by making the initial problem &#39;&#39;exploration&#39;&#39; phase more complex, it is possible to make the problem &#39;&#39;solving&#39;&#39; stage much simpler, easier and more effective.</tw-passagedata><tw-passagedata pid="60" name="Approaches to responsibility (Spectrum)" tags="" position="5950,4500" size="100,100">&lt;&lt;return&gt;&gt; | [[Background|Background (DisplayLink)]] | [[Frameworks]] | [[Scoping approaches to climate action|Scoping approaches to climate action (Framework)]] | (here) | [[(F)|passage()][$ResponsibilityScopingFrameworkFave =passage()]]&lt;&lt;remember $ResponsibilityScopingFrameworkFave&gt;&gt; 
 ----
 !!__Approaches to RESPONSIBILITY &lt;small&gt;(Spectrum)&lt;/small&gt;__
@@ -4184,7 +4181,7 @@ To turn this page into a word processing document for your own use, select the s
 [[Governments|Output Report_Governments]]
 [[Businesses|Output Report_Businesses]]
 [[International institutions|Output Report_International institutions]]
-</tw-passagedata><tw-passagedata pid="373" name="Individuals (private notes)" tags="Twine.private" position="1850,1525" size="100,100"></tw-passagedata><tw-passagedata pid="374" name="Climate action groups (private notes)" tags="" position="1975,1525" size="100,100"></tw-passagedata><tw-passagedata pid="375" name="Governments (private notes)" tags="" position="2100,1525" size="100,100"></tw-passagedata><tw-passagedata pid="376" name="International institutions (private notes)" tags="" position="2350,1525" size="100,100"></tw-passagedata><tw-passagedata pid="377" name="Businesses (private notes)" tags="" position="2225,1525" size="100,100"></tw-passagedata><tw-passagedata pid="378" name="Development design philosophy" tags="" position="1571.6666666666667,3925" size="100,100">&lt;&lt;return&gt;&gt;
+</tw-passagedata><tw-passagedata pid="373" name="Individuals (private notes)" tags="Twine.private" position="1850,1525" size="100,100"></tw-passagedata><tw-passagedata pid="374" name="Climate action groups (private notes)" tags="" position="1975,1525" size="100,100"></tw-passagedata><tw-passagedata pid="375" name="Governments (private notes)" tags="" position="2100,1525" size="100,100"></tw-passagedata><tw-passagedata pid="376" name="International institutions (private notes)" tags="" position="2350,1525" size="100,100"></tw-passagedata><tw-passagedata pid="377" name="Businesses (private notes)" tags="" position="2225,1525" size="100,100"></tw-passagedata><tw-passagedata pid="378" name="Development design philosophy" tags="" position="1571,3925" size="100,100">&lt;&lt;return&gt;&gt;
 !Development design philosophy
 !!System initiation &amp; the playthrough &amp; autosave reloads
 The adviser is being designed to run in continuous session (with state autosave and auto reload running) AND the adviser is also being updated  in functionality and content very frequently - so the continuous user session overlaps the adviser development upgrades.
@@ -4322,7 +4319,7 @@ OK - now let&#39;s move on to developing a [[&quot;Whole Package&quot; Plan]].
 
 
 
-</tw-passagedata><tw-passagedata pid="383" name="Secret developers&#39; business" tags="" position="1326.6666666666667,3928.3333333333335" size="100,100">&lt;&lt;return&gt;&gt;
+</tw-passagedata><tw-passagedata pid="383" name="Secret developers&#39; business" tags="" position="1326,3928" size="100,100">&lt;&lt;return&gt;&gt;
 !!For developers of the Adviser
 *[[Work program for the development of the Advisor|Work program for the Adviser]]
 *[[Development design philosophy]]
