--- a/index.html
+++ b/index.html
@@ -369,6 +369,13 @@ Config.saves.autoload = true;
 Config.history.maxStates = 6;
 Config.passages.displayTitles = true;
 
+/* ==========================================*/
+/* Turn off the history navigation controls */
+/* ==========================================*/
+
+Config.history.controls = false;
+
+
 //Function to make a pure restart when autosave/autoload is on
 //Joeyrsp Jan 2022 - For Twine 2 SugarCube 2
 
@@ -2494,7 +2501,7 @@ Note: Broadly speaking the idea described in this article is how the renwable en
 
 The strategy is likely to work if the promoted technologies eventually become cost competitive.  It is not clear how the strategy would apply to technologies that are needed to cool the earth (not an objective that has a market under current arrangements) but that never reach a self-funding condition.
 
-&lt;&lt;return&gt;&gt; </tw-passagedata><tw-passagedata pid="150" name="Version input" tags="" position="425,50" size="100,100">Version 14, revised 31 January 2022, 4.42 am.  &lt;small&gt;(Begun 19 December 2021)&lt;/small&gt;
+&lt;&lt;return&gt;&gt; </tw-passagedata><tw-passagedata pid="150" name="Version input" tags="" position="425,50" size="100,100">Version 14, revised 31 January 2022, 5.26 am.  &lt;small&gt;(Begun 19 December 2021)&lt;/small&gt;
 
 Generated using Twine 2.3.16.  
 More information about Twine 2 can be found at: 
@@ -4827,7 +4834,7 @@ Reusable modules would need to have mass functions such as saves of the reusable
 	});
 &lt;&lt;/script&gt;&gt;
 /* &lt;&lt;textboxPlus&gt;&gt; widget - End */</tw-passagedata><tw-passagedata pid="391" name="The global Climate Rescue IT strategy" tags="" position="2000,12150" size="100,100">!The global Climate Rescue IT strategy
-&quot;&quot;//Philip://&quot;&quot; I&#39;ve got a whole new evolutionary leap in mind growing out of the adviser project.
+&#39;&#39;//Philip://&#39;&#39; I&#39;ve got a whole new evolutionary leap in mind growing out of the adviser project.
 
 Already part of the design is the idea that the adviser would prompt a  human to human conversation between the user and climate rescue core campaigners.
 
