--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ var LZString={_keyStr:"ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz01234
 		<div id="init-lacking"><p>Browser lacks capabilities required to play.</p><p>Upgrade or switch to another browser.</p></div>
 		<div id="init-loading"><div>Loading&hellip;</div></div>
 	</div>
-	<tw-storydata name="Draft Adviser_T2-SC" startnode="318" creator="Twine" creator-version="2.3.16" ifid="F6008109-261F-402E-A46A-FB1960655837" zoom="0.6" format="SugarCube" format-version="2.36.1" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">/**********************************************************************
+	<tw-storydata name="Draft Adviser_T2-SC" startnode="318" creator="Twine" creator-version="2.3.16" ifid="F6008109-261F-402E-A46A-FB1960655837" zoom="0.25" format="SugarCube" format-version="2.36.1" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">/**********************************************************************
  BLEACHED theme (toggleable) - A largely white style for SugarCube ≥v2.25.0 (Created by Thomas Edwards & adapted by HiEv, & colour tweaked by Philip
 https://qjzhvmqlzvoo5lqnrvuhmg-on.drv.tw/UInv/Sample_Code.html#Day%20and%20Night%20Mode%20Setting
  *********************************************************************/
@@ -1722,7 +1722,7 @@ Translations: https://www.breakthroughonline.org.au/translations</tw-passagedata
 
 
 
-&lt;&lt;return&gt;&gt; | [[«previous|Orientations to climate outcomes (Spectrum)]]</tw-passagedata><tw-passagedata pid="108" name="Favourites" tags="" position="50,296" size="100,100">!!Favourites
+&lt;&lt;return&gt;&gt; | [[«previous|Orientations to climate outcomes (Spectrum)]]</tw-passagedata><tw-passagedata pid="108" name="Favourites" tags="" position="50,300" size="100,100">!!Favourites
 User-defined favourites should show up between the lines below.  Click on the star to cancel a favourites listing.  (You can also cancel a favourites listing in the favourited page itself.)
 
 For further advice on using the favourites system go to: [[Help]]
@@ -1735,7 +1735,7 @@ For further advice on using the favourites system go to: [[Help]]
 &lt;&lt;/nobr&gt;&gt;&lt;&lt;for _index, _fave range $favourites&gt;&gt;
   &lt;&lt;nobr&gt;&gt;
     &lt;&lt;capture _index, _fave&gt;&gt;
-        [[_fave]]&amp;nbsp;
+        &lt;&lt;link _fave _fave&gt;&gt;&lt;&lt;/link&gt;&gt;&amp;nbsp;
         &lt;&lt;link &quot;★&quot;&gt;&gt;
             &lt;&lt;run $favourites.splice(_index, 1)&gt;&gt;
             &lt;&lt;goto [[Favourites]]&gt;&gt;
@@ -2248,7 +2248,7 @@ Note: Broadly speaking the idea described in this article is how the renwable en
 
 The strategy is likely to work if the promoted technologies eventually become cost competitive.  It is not clear how the strategy would apply to technologies that are needed to cool the earth (not an objective that has a market under current arrangements) but that never reach a self-funding condition.
 
-&lt;&lt;return&gt;&gt; </tw-passagedata><tw-passagedata pid="149" name="Version input (2include)" tags="" position="425,173.33333333333334" size="100,100">Version 15, revised 15 February 2022, 5.55 pm.  &lt;small&gt;(Begun 19 December 2021)&lt;/small&gt;
+&lt;&lt;return&gt;&gt; </tw-passagedata><tw-passagedata pid="149" name="Version input (2include)" tags="" position="425,173" size="100,100">Version 15, revised 15 February 2022, 5.55 pm.  &lt;small&gt;(Begun 19 December 2021)&lt;/small&gt;
 
 Generated using Twine 2.3.16.  
 More information about Twine 2 can be found at: 
@@ -3499,7 +3499,7 @@ To avoid the negative characteristics of these three stereotypes one should inst
 
 
 
-&lt;&lt;return&gt;&gt; </tw-passagedata><tw-passagedata pid="285" name="Decision-making?Govt2include" tags="" position="2225,17753.333333333336" size="100,100">Who should sign off on the final action checklist for the stage of emergency work that your government is involved in now? What skills, knowledge and authority do they need to have?
+&lt;&lt;return&gt;&gt; </tw-passagedata><tw-passagedata pid="285" name="Decision-making?Govt2include" tags="" position="2225,17753" size="100,100">Who should sign off on the final action checklist for the stage of emergency work that your government is involved in now? What skills, knowledge and authority do they need to have?
 
 You might want to have a look at the [[previous|Who leads?]] passage on who will prepare a draft action checklist before deciding who will sign off on it.
 
@@ -4069,7 +4069,7 @@ To maximise what can be achieved, it pays to adopt an optimistic approach to hig
 
 &lt;&lt;return&gt;&gt; | [[«previous|Custodial chain--Backbone]] | [[next»|Climate science--Backbone]]</tw-passagedata><tw-passagedata pid="338" name="Background (DisplayLink)" tags="" position="3175,4000" size="100,100">&lt;&lt;include [[Background]]&gt;&gt;</tw-passagedata><tw-passagedata pid="339" name="Continuous improvement-quality_Opportunity multiplying_Framework2include" tags="" position="8800,8500" size="100,100">!!!&lt;small&gt;(Opportunity multiplying – Framework)&lt;/small&gt;&lt;br&gt;33. Continuous improvement and quality
 It is possible to work towards a complex ideal condition if efforts are made to evolve towards the ideal state over time. This process of evolution will need to involve lots of small steps and a number of major steps. The process of &#39;continuous improvement&#39; that is advocated in management theory is a good foundation for this approach.</tw-passagedata><tw-passagedata pid="340" name="Q--Care for--Backbone--2include" tags="" position="3550,4875" size="100,100">*Who and what do people care for ie. want to protect for ethical and/or interest reasons – with an Australia n focus and with a global focus?
-*Who and what should people care for ie. want to protect – with an Australia n focus and with a global focus?</tw-passagedata><tw-passagedata pid="341" name="Frameworks-Label" tags="" position="2925,4125" size="200,200"></tw-passagedata><tw-passagedata pid="342" name="Who leads?Govt2include" tags="" position="2100,17747.666666666668" size="100,100">Who should be involved in preparing your draft action checklist for the stage of emergency work that your government is involved in now?  Which specific people should be involved?  What skills, knowledge do the checklist development leaders need to have?  To get a handle on this you might want to have a look at the [[where to start|Where to start?]] passage and the topics list passages on [[preparing|Topics list--Preparing]], [[switching|Topics list--Switching]] and [[operating|Topics list--Operating]].
+*Who and what should people care for ie. want to protect – with an Australia n focus and with a global focus?</tw-passagedata><tw-passagedata pid="341" name="Frameworks-Label" tags="" position="2925,4125" size="200,200"></tw-passagedata><tw-passagedata pid="342" name="Who leads?Govt2include" tags="" position="2100,17747" size="100,100">Who should be involved in preparing your draft action checklist for the stage of emergency work that your government is involved in now?  Which specific people should be involved?  What skills, knowledge do the checklist development leaders need to have?  To get a handle on this you might want to have a look at the [[where to start|Where to start?]] passage and the topics list passages on [[preparing|Topics list--Preparing]], [[switching|Topics list--Switching]] and [[operating|Topics list--Operating]].
 
 You might also want to have a look at the [[next|Decision-making?]] passage on who signs off on the action checklist before deciding who will do the work on the draft checklist.
 
